examples/test/testpolicy6543.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6543
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value43
          key10: value36
      podSelector:
        matchLabels:
          key42: value48
          key22: value6
          key28: value35
